--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,21 +1,20 @@
 {% extends "base.html" %}
-{% load blog_extras %}
 {% block content %}
     <h2>Blog Posts</h2>
     {% for post in posts %}
         <div class="row">
             <div class="col">
                 <h3>{{ post.title }}</h3>
-                <small>By {{  post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
+                {% include "post-byline.html" %}
                 <p>{{ post.summary }}</p>
                 <p>
-                ({{ post.content|wordcount }} words)
-                <a href="#">Read More</a>
+                    ({{ post.content|wordcount }} words)
+                    <a href="{% url "blog-post-detail" post.slug %}">Read More</a>
                 </p>
                 <div class="ms-3">
                     <h6>Comments:</h6>
                     {% for comment in post.comments.all %}
-                        <small>By {{ post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
+                        {% include "post-byline.html" %}
                         <p>{{ comment.content }}</p>
                     {% endfor %}
                 </div>
